@@ -1,5 +1,8 @@
 2007-10-15  Sébastien Sablé  <sable@users.sourceforge.net>
 
+	* Sybase.py: backward compatibility - restored deprecated
+	use_datetime attribut
+
 	* setup.py: Sybase libraries do not have "_r64" at the end on OSF1
 
 	* Use setuptools and distribute ez_setup.py
